# SOFTWARES

./: README.md
FOMO/: PrivMesh.code-workspace
FOMO/flutter_app/: README.md  pubspec.yaml
FOMO/flutter_app/android/app/: build.gradle.kts
FOMO/flutter_app/android/app/src/main/: AndroidManifest.xml
FOMO/flutter_app/android/app/src/main/kotlin/com/privmesh/privmesh/: MainActivity.kt
FOMO/flutter_app/ios/Runner/: Info.plist
FOMO/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
FOMO/flutter_app/linux/: CMakeLists.txt
FOMO/flutter_app/linux/runner/: my_application.cc
FOMO/flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
FOMO/flutter_app/macos/Runner.xcodeproj/: project.pbxproj
FOMO/flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
FOMO/flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
FOMO/flutter_app/test/: widget_test.dart
FOMO/flutter_app/web/: index.html  manifest.json
FOMO/flutter_app/windows/: CMakeLists.txt
FOMO/flutter_app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
FOMO/flutter_app/windows/runner/: Runner.rc  main.cpp
FOMO/rust_core/: Cargo.toml
FOMO/rust_core/src/: lib.rs
FOMO/rust_core/src/audio/: mod.rs
FOMO/rust_core/src/crypto/: mod.rs
FOMO/rust_core/src/network/: mod.rs
FOMO/rust_core/src/storage/: mod.rs
HWP/: README.md  main.py  requirements.txt  run.bat  run.sh  server.py
HWP/static/: index.html  manifest.json  sw.js
TRANSLATION APP/: all to bn.py
